changed error text

--- a/CooksCorner1.0/Views/Shared/Error.cshtml
+++ b/CooksCorner1.0/Views/Shared/Error.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1 class="text-danger">Whoops something went wrong</h1>
-<h2 class="text-danger">Somthig has happened and we didnt expect it.</h2>
+<h2 class="text-danger">Somthing has happened to the we page, but dont worry its us and not you.</h2>
 
 <div><a href="~/Home/Index">Click me to return to the front page</a></div>
 
